2008-12-14  Adam Schreiber  <sadam@clemson.edu>

    * pkcs11/seahorse-pkcs11-object.c: Fix compiler error

2008-12-14  Stef Walter  <stef@memberwebs.com>

	* daemon/seahorse-daemon.c:
	* gkr/seahorse-gkr-item-properties.c:
	* gkr/seahorse-gkr-keyring.c:
	* gkr/seahorse-gkr-source.c:
	* gkr/seahorse-gkr-source.h:
	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-context.h:
	* libseahorse/seahorse-source.c:
	* libseahorse/seahorse-unknown-source.c:
	* pgp/seahorse-hkp-source.c:
	* pgp/seahorse-ldap-source.c:
	* pgp/seahorse-pgp-source.c:
	* pgp/seahorse-server-source.c:
	* pkcs11/seahorse-pkcs11-source.c:
	* src/main.c:
	* src/seahorse-key-manager.h:
	* src/seahorse-key-manager.c:
	* ssh/seahorse-ssh-source.c: Make SeahorseGkrKeyring be both
	a SeahorseObject and a SeahorseSource. Enumerate keyrings 
	properly. Don't list items in locked keyrings. Refresh 
	sources as they're added to the context.
	
2008-12-14  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-transfer-operation.c:
    * libseahorse/seahorse-progress.c:
    * src/seahorse-key-manager.c:
    * src/seahorse-key-manager.vala: Use g_timeout_add_seconds instead of
    g_timeout_add where possible to allow for event grouping. 
    Patch from Debarshi RayFixes bug #564403.  

2008-12-14  Stef Walter  <stef@memberwebs.com>

	* src/Makefile.am:
	* src/seahorse-key-manager.c:
	* src/seahorse-key-manager.h:
	* src/seahorse-key-manager.vala: (removed)
	Change Key manager window to C code from vala.
	
2008-12-14  Stef Walter  <stef@memberwebs.com>

	* common/seahorse-registry.c:
	* common/seahorse-registry.h:
	* daemon/seahorse-service-keyset.c:
	* gkr/seahorse-gkr-source.c:
	* gkr/seahorse-gkr-source.h:
	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-context.h:
	* libseahorse/seahorse-source.c:
	* libseahorse/seahorse-source.h:
	* libseahorse/seahorse-unknown-source.c:
	* libseahorse/seahorse-unknown-source.h:
	* pgp/seahorse-hkp-source.c:
	* pgp/seahorse-ldap-source.c: