@@ -1,5 +1,7 @@
 2008-12-14  Adam Schreiber  <sadam@clemson.edu>
 
+    * src/Makefile.am:
+    * src/seahorse-key-manager.c: Fix building without keyserver
     * pkcs11/seahorse-pkcs11-object.c: Fix compiler error
 
 2008-12-14  Stef Walter  <stef@memberwebs.com>
